# prisma-engine

./: .envrc  datamodel_v2.prisma
libs/introspection-command/: Cargo.toml
libs/introspection-command/tests/: e2e_tests.rs  introspection_command_tests.rs
libs/introspection-command/tests/common/: mod.rs
libs/introspection-command/tests/resources/: dev.db
libs/logger/: Cargo.toml
libs/logger/src/: lib.rs
libs/prisma-inflector/: Cargo.toml
prisma-models/: Cargo.toml
query-engine/connectors/query-connector/: Cargo.toml
query-engine/connectors/query-connector/src/: lib.rs
query-engine/connectors/query-connector/src/interfaces/: managed_database_reader.rs  unmanaged_database_writer.rs
query-engine/connectors/query-connector/src/result_ast/: write_result_ast.rs
query-engine/connectors/sql-query-connector/: Cargo.toml
query-engine/connectors/sql-query-connector/src/: database.rs  error.rs  lib.rs
query-engine/connectors/sql-query-connector/src/database/: mysql.rs  postgresql.rs  sqlite.rs
query-engine/connectors/sql-query-connector/src/query_builder/write/: builder.rs  delete_actions.rs
query-engine/connectors/sql-query-connector/src/transactional/: managed_database_reader.rs  mod.rs
query-engine/core/: Cargo.toml
query-engine/core/src/executor/: mod.rs  read.rs  write.rs
query-engine/core/src/query_builders/read/: mod.rs
query-engine/core/src/query_builders/write/: create.rs  nested.rs
query-engine/core/src/schema/builders/input_type_builder/: mod.rs
query-engine/prisma/: Cargo.toml
query-engine/prisma/src/: context.rs  main.rs  server.rs
query-engine/prisma/src/request_handlers/: mod.rs
query-engine/prisma/src/request_handlers/graphql/: handler.rs  protocol_adapter.rs
query-engine/prisma/src/server/: tests.rs
query-engine/prisma/src/server/tests/: test_server.rs
(+13 files in other folders)
