[package]
name = "prisma"
version = "0.1.0"
authors = ["Dominic Petrick <dompetrick@gmail.com>", "Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"

[features]
default = ["sql", "graphql"]
sql = ["sql-query-connector", "prisma-query"]
graphql = ["graphql-parser"]

[dependencies]
tokio = "0.2.0-alpha.5"
tokio-executor = "0.2.0-alpha.5"
futures-preview = { version = "0.3.0-alpha.18", features = ["compat"] }
http = "0.1"
hyper = { version = "0.13.0-alpha.2", features = ["unstable-stream"] }
num_cpus = "1.10"

pretty_env_logger = "0.3"
lazy_static = "1.3"
prisma-inflector = { path = "../../libs/prisma-inflector" }
datamodel = { path = "../../libs/datamodel" }
prisma-models = { path = "../../prisma-models" }
core = { path = "../core", package = "query-core" }
sql-query-connector = { path = "../connectors/sql-query-connector", optional = true }
prisma-query = { git = "https://github.com/prisma/prisma-query", optional = true }
graphql-parser = { version = "0.2.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [ "preserve_order" ] }
base64 = "0.10"
rust-embed = { version = "4.3", features = ["debug-embed"] }
failure = "0.1"
failure_derive = "0.1"
debug_stub_derive = "0.3"
indexmap = { version = "1.0", features = [ "serde-1" ] }
itertools = "0.8"
url = "1.7"
clap = "2.33"
human-panic = "1.0"
mimallocator = "0.1"

tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { git = "https://github.com/pimeys/tracing", branch = "format-json", features = ["json"] }
tracing-attributes = "0.1"
log = "0.4"

[build-dependencies]
rustc_version = "0.2.3"

[dev-dependencies]
migration-core = { path = "../../migration-engine/core" }
